<resources>
    <string name="app_name">E-Commerce</string>
    <string name="splash_ecommerce_text">E-Commerce</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_user">Enter user</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_telephone">Enter telephone</string>
    <string name="register_text_btn">Register</string>
    <string name="register_now_text_btn">REGISTER NOW</string>
    <string name="login_now_text_btn">LOGIN NOW</string>
    <string name="get_password_btn_text">GET PASSWORD</string>
    <string name="forgot_password_text_btn">FORGOT PASSWORD</string>

    <string name="my_files">My Files</string>
    <string name="shared">Shared</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string name="drawer_welcome_text">¡Bienvenido/a!</string>
    <string name="top_app_bar_search_text">Buscar</string>
    <string name="top_app_bar_notification_text">Notificaciones</string>
    <string name="top_app_bar_cart_text">Carrito</string>
    <string name="image_list_content_description">Version Android SO</string>
    <string name="textview_list_title_description">Titulo</string>
    <string name="textview_list_version_description">Versión</string>

    <!-- TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>