<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
            android:id="@+id/app_bar_search"
            android:icon="@mipmap/search_icon"
            android:title="@string/top_app_bar_search_text" app:actionViewClass="android.widget.SearchView"
            app:showAsAction="ifRoom"
            android:visible="true" android:enabled="true" android:checkable="true"/>
    <item android:title="@string/top_app_bar_notification_text" android:icon="@mipmap/notifications_active_icon"
          android:visible="true"
          android:enabled="true" android:checkable="true" app:showAsAction="ifRoom"/>
    <item android:title="@string/top_app_bar_cart_text" android:icon="@mipmap/shopping_cart_icon" android:enabled="true"
          android:visible="true"
          android:checkable="true" app:showAsAction="ifRoom"/>
</menu>